Switch to Java 18 and fix performance issue